feat(LIB-8): added books adding
