# apps/api/src/model/book.ts
@@ -1,5 +1,11 @@
 export type Book = {
-  id: number;
+  id?: number;
+  title: string;
+  author: string;
+  pages: number;
+};
+
+export type CreateBook = {
   title: string;
   author: string;
   pages: number;
