# data-access/models.ts
@@ -2,4 +2,5 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export type { Book } from './models/book';
+export type { CreateBook } from './models/create-book';
 export type { Error } from './models/error';
