# data-access/models/create-book.ts
@@ -1,9 +1,8 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export interface Book {
+export interface CreateBook {
   author: string;
-  id?: number;
   pages: number;
   title: string;
 }
